--- a/index.html
+++ b/index.html
@@ -2,30 +2,164 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="First-sprint of Sergey Podkolzin">
+  <meta name="keywords" content="html,css">
+  <meta name="author" content="Sergey Podkolzin">
+  <link rel="stylesheet" href="./styles/normalize.css"> 
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
+
 <body>
   <div class="page">
-    <header class="header">
+      <header class="header">
+        <div class="logo logo_place_header"></div>  
+          <h1 class="header__title"> Научиться учиться</h1>
+          <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+            <a href="#" class="link header-link">Узнать &rarr;</a>
+          </h2>
+          <link href="#" class="link header__link">
+          <img src="./images/header-image.png" alt="" class="header__main-illustration">
+          <div class="header__square-pic"></div>
+      </header>
 
-    </header>
-    <main class="content">
-      <section class="description">
-      </section>
+      <main class="content">
+          <section class="description">
+            <div class="two-columns">
+              <p class="two-columns__brief">Главные проблемы в обучении</p>
+              <div class="two-columns__main-text">
+                <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+                <p class="two-columns__paragraph">
+                  <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+                <p class="two-columns__paragraph two-columns__paragraph_end">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            </div>
+            </div> 
+          </section>
 
-      <section class="digits">
-      </section>
+          <section class="digits">
+            <h1 class="digits__section-title">Цифры и факты</h1>
+            <h2 class="digits__section-subtitle">Про учёбу и мозг</h2>
+            <div class="table digits__table">
+              <div class="table__cell">
+                <h3 class="table__heading">86 миллиардов</h3>
+                <p class="table__text">Число нейронов в мозге человека</p>
+              </div>
+              <div class="table__cell">
+                <h3 class="table__heading">2.1 миллиарда</h3>
+                <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                <p class="table__text table__text_bank">Всемирный Банк, 2017</p>
+              </div>
+              <div class="table__cell">
+                <h3 class="table__heading">1000 терабайт</h3>
+                <p class="table__text">Объём памяти человека</p>
+              </div>
+              <div class="table__cell">
+                <h3 class="table__heading">500 триллионов</h3>
+                <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+              </div>
+              <div class="table__cell">
+                <h3 class="table__heading">420 миллионов</h3>
+                <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                <p class="table__text table__text_bank">Всемирный Банк, 2017</p>
+              </div>
+              <div class="table__cell">
+                <h3 class="table__heading">17–20 лет</h3>
+                <p class="table__text">Пик обучаемости</p>
+              </div>
+              <div class="table__cell">
+                <h3 class="table__heading">1885 год</h3>
+                <p class="table__text">Открытие кривой забывания</p>
+              </div>
+              <div class="table__cell">
+                <h3 class="table__heading">1889 год</h3>
+                <p class="table__text">Открытие условного рефлекса</p>
+              </div>
+            </div> 
+          </section>
 
-      <section class="feynman">
-      </section>
+          <section class="feynman">
+            <h1 class="feynman__title">Метод Фейнмана</h1>
+            <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+            <a href="#" class="link feynman__link">Подробнее &rarr;</a>
+          </section>
 
-      <section class="kaufman">
-      </section>
-    </main>
-    <footer class="footer">
+          <section class="kaufman">
+            <h1 class="section-title">Принципы обучения</h1>
+            <h2 class="section-subtitle">от Джоша Кауфмана</h2>
+            <div class="table table__theme_dark">
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">1</h3>
+                <p class="table__text">Выберите привлекательный проект</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">2</h3>
+                <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">3</h3>
+                <p class="table__text">Определите целевой уровень мастерства.</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">4</h3>
+                <p class="table__text">Разбейте навык на элементы.</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">5</h3>
+                <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">6</h3>
+                <p class="table__text">Устраните препятствия для занятий.</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">7</h3>
+                <p class="table__text">Выделите специальное время для занятий.</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">8</h3>
+                <p class="table__text">Создайте быстрые петли обратной связи.</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">9</h3>
+                <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+              </div>
+              <div class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">10</h3>
+                <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+              </div>
+            </div>
+            <div class="triangle"></div>
+          </section>
+      </main>
 
-    </footer>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column footer__column_content-copyright">
+            <div class="logo logo_place_footer"></div> 
+            <p class="footer__author">&copy; 2019 Виктор Абанькин</p>
+          </div>
+          <div class="footer__column footer__column_content-info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+            <ul class="footer__column-links">
+              <li><a class="link footer__link-color" href="#">Главная</a></li>
+              <li><a class="link footer__link-color" href="#">Концепция</a></li>  
+              <li><a class="link footer__link-color" href="#">Наставники</a></li>  
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content-social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <ul class="footer__column-links">
+              <li><a class="link footer__link-color" href="#">
+                <img class="footer__social-icon" src="./images/facebook_color_white.svg"> Facebook</a></li>
+              <li><a class="link footer__link-color" href="#">
+                <img class="footer__social-icon" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
+              <li><a class="link footer__link-color" href="#">
+                <img class="footer__social-icon" src="./images/instagram_color_white.svg"> Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
   </div>
 </body>
 </html>
