--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
       <header class="header">
         <div class="logo logo_place_header"></div>  
           <h1 class="header__title"> Научиться учиться</h1>
-          <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-            <a href="#" class="link header-link">Узнать &rarr;</a>
-          </h2>
-          <link href="#" class="link header__link">
+          <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+            <a href="#" class="link header__link">Узнать &rarr;</a>
+          </p>
           <img src="./images/header-image.png" alt="" class="header__main-illustration">
           <div class="header__square-pic"></div>
       </header>
@@ -38,8 +37,8 @@
           </section>
 
           <section class="digits">
-            <h1 class="digits__section-title">Цифры и факты</h1>
-            <h2 class="digits__section-subtitle">Про учёбу и мозг</h2>
+            <h2 class="digits__section-title">Цифры и факты</h2>
+            <h3 class="digits__section-subtitle">Про учёбу и мозг</h3>
             <div class="table digits__table">
               <div class="table__cell">
                 <h3 class="table__heading">86 миллиардов</h3>
@@ -79,14 +78,14 @@
           </section>
 
           <section class="feynman">
-            <h1 class="feynman__title">Метод Фейнмана</h1>
-            <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+            <h2 class="feynman__title">Метод Фейнмана</h2>
+            <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
             <a href="#" class="link feynman__link">Подробнее &rarr;</a>
           </section>
 
           <section class="kaufman">
-            <h1 class="section-title">Принципы обучения</h1>
-            <h2 class="section-subtitle">от Джоша Кауфмана</h2>
+            <h2 class="section-title">Принципы обучения</h2>
+            <h3 class="section-subtitle">от Джоша Кауфмана</h3>
             <div class="table table__theme_dark">
               <div class="table__cell table__cell_theme_dark">
                 <h3 class="table__heading">1</h3>
@@ -151,11 +150,11 @@
             <h3 class="footer__column-heading">Соцсети</h3>
             <ul class="footer__column-links">
               <li><a class="link footer__link-color" href="#">
-                <img class="footer__social-icon" src="./images/facebook_color_white.svg"> Facebook</a></li>
+                <img class="footer__social-icon" alt="" src="./images/facebook_color_white.svg"> Facebook</a></li>
               <li><a class="link footer__link-color" href="#">
-                <img class="footer__social-icon" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
+                <img class="footer__social-icon" alt="" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
               <li><a class="link footer__link-color" href="#">
-                <img class="footer__social-icon" src="./images/instagram_color_white.svg"> Instagram</a></li>
+                <img class="footer__social-icon" alt="" src="./images/instagram_color_white.svg"> Instagram</a></li>
             </ul>
           </div>
         </div>
