--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
                 <p class="two-columns__paragraph">
                   <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-                <p class="two-columns__paragraph two-columns__paragraph_end">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+                <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
             </div> 
           </section>
 
           <section class="digits">
-            <h2 class="digits__section-title">Цифры и факты</h2>
-            <h3 class="digits__section-subtitle">Про учёбу и мозг</h3>
-            <div class="table digits__table">
+            <h2 class="section-title">Цифры и факты</h2>
+            <h3 class="section-subtitle">Про учёбу и мозг</h3>
+            <div class="table">
               <div class="table__cell">
                 <h3 class="table__heading">86 миллиардов</h3>
                 <p class="table__text">Число нейронов в мозге человека</p>
@@ -47,7 +47,7 @@
               <div class="table__cell">
                 <h3 class="table__heading">2.1 миллиарда</h3>
                 <p class="table__text">Число нуждающихся в повышении квалификации</p>
-                <p class="table__text table__text_bank">Всемирный Банк, 2017</p>
+                <p class="table__text">Всемирный Банк, 2017</p>
               </div>
               <div class="table__cell">
                 <h3 class="table__heading">1000 терабайт</h3>
@@ -88,47 +88,47 @@
             <h3 class="section-subtitle">от Джоша Кауфмана</h3>
             <div class="table table__theme_dark">
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">1</h3>
-                <p class="table__text">Выберите привлекательный проект</p>
+                <h3 class="table__heading table__heading_theme_dark">1</h3>
+                <p class="table__text table__text_theme_dark">Выберите привлекательный проект</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">2</h3>
-                <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+                <h3 class="table__heading table__heading_theme_dark">2</h3>
+                <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">3</h3>
-                <p class="table__text">Определите целевой уровень мастерства.</p>
+                <h3 class="table__heading table__heading_theme_dark">3</h3>
+                <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">4</h3>
-                <p class="table__text">Разбейте навык на элементы.</p>
+                <h3 class="table__heading table__heading_theme_dark">4</h3>
+                <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">5</h3>
-                <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+                <h3 class="table__heading table__heading_theme_dark">5</h3>
+                <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">6</h3>
-                <p class="table__text">Устраните препятствия для занятий.</p>
+                <h3 class="table__heading table__heading_theme_dark">6</h3>
+                <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">7</h3>
-                <p class="table__text">Выделите специальное время для занятий.</p>
+                <h3 class="table__heading table__heading_theme_dark">7</h3>
+                <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">8</h3>
-                <p class="table__text">Создайте быстрые петли обратной связи.</p>
+                <h3 class="table__heading table__heading_theme_dark">8</h3>
+                <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">9</h3>
-                <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+                <h3 class="table__heading table__heading_theme_dark">9</h3>
+                <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
               </div>
               <div class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">10</h3>
-                <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+                <h3 class="table__heading table__heading_theme_dark">10</h3>
+                <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
               </div>
             </div>
-            <div class="triangle"></div>
+            <div class="kaufman__triangle"></div>
           </section>
       </main>
 
@@ -140,22 +140,26 @@
           </div>
           <div class="footer__column footer__column_content-info">
             <h3 class="footer__column-heading">О Практикуме</h3>
-            <ul class="footer__column-links">
-              <li><a class="link footer__link-color" href="#">Главная</a></li>
-              <li><a class="link footer__link-color" href="#">Концепция</a></li>  
-              <li><a class="link footer__link-color" href="#">Наставники</a></li>  
-            </ul>
+            <nuv class="footer__column-links">
+              <ul>
+                <li><a class="link footer__column-link" href="#">Главная</a></li>
+                <li><a class="link footer__column-link" href="#">Концепция</a></li>  
+                <li><a class="link footer__column-link" href="#">Наставники</a></li>  
+              </ul>
+          </nuv>
           </div>
           <div class="footer__column footer__column_content-social">
             <h3 class="footer__column-heading">Соцсети</h3>
-            <ul class="footer__column-links">
-              <li><a class="link footer__link-color" href="#">
-                <img class="footer__social-icon" alt="" src="./images/facebook_color_white.svg"> Facebook</a></li>
-              <li><a class="link footer__link-color" href="#">
-                <img class="footer__social-icon" alt="" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
-              <li><a class="link footer__link-color" href="#">
-                <img class="footer__social-icon" alt="" src="./images/instagram_color_white.svg"> Instagram</a></li>
-            </ul>
+            <nuv class="footer__column-links"> 
+              <ul>
+                <li><a class="link footer__column-link" href="#">
+                  <img class="footer__social-icon" alt="" src="./images/facebook_color_white.svg"> Facebook</a></li>
+                <li><a class="link footer__column-link" href="#">
+                  <img class="footer__social-icon" alt="" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
+                <li><a class="link footer__column-link" href="#">
+                  <img class="footer__social-icon" alt="" src="./images/instagram_color_white.svg"> Instagram</a></li>
+              </ul>
+          </nuv>
           </div>
         </div>
       </footer>
