--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           </section>
 
           <section class="kaufman">
-            <h2 class="section-title">Принципы обучения</h2>
-            <h3 class="section-subtitle">от Джоша Кауфмана</h3>
+            <h2 class="section-title section-title__theme_dark">Принципы обучения</h2>
+            <h3 class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</h3>
             <div class="table table__theme_dark">
               <div class="table__cell table__cell_theme_dark">
                 <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -140,17 +140,17 @@
           </div>
           <div class="footer__column footer__column_content-info">
             <h3 class="footer__column-heading">О Практикуме</h3>
-            <nuv class="footer__column-links">
+            <nav class="footer__column-links">
               <ul>
                 <li><a class="link footer__column-link" href="#">Главная</a></li>
                 <li><a class="link footer__column-link" href="#">Концепция</a></li>  
                 <li><a class="link footer__column-link" href="#">Наставники</a></li>  
               </ul>
-          </nuv>
+          </nav>
           </div>
           <div class="footer__column footer__column_content-social">
             <h3 class="footer__column-heading">Соцсети</h3>
-            <nuv class="footer__column-links"> 
+            <nav class="footer__column-links"> 
               <ul>
                 <li><a class="link footer__column-link" href="#">
                   <img class="footer__social-icon" alt="" src="./images/facebook_color_white.svg"> Facebook</a></li>
@@ -159,7 +159,7 @@
                 <li><a class="link footer__column-link" href="#">
                   <img class="footer__social-icon" alt="" src="./images/instagram_color_white.svg"> Instagram</a></li>
               </ul>
-          </nuv>
+          </nav>
           </div>
         </div>
       </footer>
