--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
             <a href="#" class="link header__link">Узнать &rarr;</a>
           </p>
-          <img src="./images/header-image.png" alt="" class="header__main-illustration">
+          <img src="./images/header-image.png" alt="Картина художника Федора Решетникова Опять Двойка" class="header__main-illustration">
           <div class="header__square-pic"></div>
       </header>
 
@@ -60,7 +60,7 @@
               <div class="table__cell">
                 <h3 class="table__heading">420 миллионов</h3>
                 <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-                <p class="table__text table__text_bank">Всемирный Банк, 2017</p>
+                <p class="table__text">Всемирный Банк, 2017</p>
               </div>
               <div class="table__cell">
                 <h3 class="table__heading">17–20 лет</h3>
@@ -141,7 +141,7 @@
           <div class="footer__column footer__column_content-info">
             <h3 class="footer__column-heading">О Практикуме</h3>
             <nav class="footer__column-links">
-              <ul>
+              <ul class="footer__list">
                 <li><a class="link footer__column-link" href="#">Главная</a></li>
                 <li><a class="link footer__column-link" href="#">Концепция</a></li>  
                 <li><a class="link footer__column-link" href="#">Наставники</a></li>  
@@ -151,13 +151,13 @@
           <div class="footer__column footer__column_content-social">
             <h3 class="footer__column-heading">Соцсети</h3>
             <nav class="footer__column-links"> 
-              <ul>
+              <ul class="footer__list">
                 <li><a class="link footer__column-link" href="#">
-                  <img class="footer__social-icon" alt="" src="./images/facebook_color_white.svg"> Facebook</a></li>
+                  <img class="footer__social-icon" alt="Логотип Facebook" src="./images/facebook_color_white.svg"> Facebook</a></li>
                 <li><a class="link footer__column-link" href="#">
-                  <img class="footer__social-icon" alt="" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
+                  <img class="footer__social-icon" alt="Логотип ВКонтакте" src="./images/vk_color_white.svg"> ВКонтакте</a></li>
                 <li><a class="link footer__column-link" href="#">
-                  <img class="footer__social-icon" alt="" src="./images/instagram_color_white.svg"> Instagram</a></li>
+                  <img class="footer__social-icon" alt="Логотип Instagram" src="./images/instagram_color_white.svg"> Instagram</a></li>
               </ul>
           </nav>
           </div>
