--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <meta name="description" content="First-sprint of Sergey Podkolzin">
   <meta name="keywords" content="html,css">
   <meta name="author" content="Sergey Podkolzin">
-  <link rel="stylesheet" href="./styles/normalize.css"> 
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
 <body>
-  <div class="page">
+  <div class="root">
       <header class="header">
         <div class="logo logo_place_header"></div>  
           <h1 class="header__title"> Научиться учиться</h1>
@@ -32,8 +31,68 @@
                 <p class="two-columns__paragraph">
                   <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
                 <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-            </div>
+             </div>
             </div> 
+          </section>
+
+          <section class="techniques">
+            <h2 class="section-title">Техники обучения</h2>
+            <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+            <div class="cards">
+              <div class="cards__item">
+                <img src="./images/cards-attention.png" alt="Фото книги 101 эссе, которые изменят ваше мышление" class="cards__image">
+                <h3 class="cards__title">Два вида внимания</h3>
+                <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+              </div>
+              <div class="cards__item">
+                <img src="./images/cards-recall.png" alt="Фото Скульптуры Мальчика со свирелью. К сожалению, автора не нашел" class="cards__image">
+                <h3 class="cards__title">Recall</h3>
+                <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+              </div>
+              <div class="cards__item">
+                <img src="./images/cards-interliving.png" alt="Фото холла всемирного торгового центра Башня свободы в Нью-Йорке" class="cards__image">
+                <h3 class="cards__title">Интерливинг</h3>
+                <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+              </div>
+              <div class="cards__item">
+                <img src="./images/cards-question.png" alt="Фото сверху с угла одного из смежных помещений Городской библиотеки Штутгарта. На ней почти посередине зала одиноко стоит человек к нам спиной. " class="cards__image">
+                <h3 class="cards__title">Вопросы</h3>
+                <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+              </div>
+              <div class="cards__item">
+                <img src="./images/cards-competence.png" alt="Фото - Стопка книг лежит на ладоне" class="cards__image">
+                <h3 class="cards__title">Иллюзия компетентности</h3>
+                <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+              </div>
+            </div>
+          </section>
+
+          <section class="video">
+            <h2 class="section-title">Видео нa TED</h2>
+            <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+            <div class="video__iframes">
+              <div class="video__iframe">
+                <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <div class="video__iframe">
+                <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+          </section>
+
+          <section class="oakley">
+            <div class="two-columns">
+              <p class="two-columns__brief">История Барбары Оакли.</p>
+              <div class="two-columns__main-text">
+                <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+             </div>
+            </div> 
+          </section>
+
+          <section class="feynman">
+            <h2 class="feynman__title">Метод Фейнмана</h2>
+            <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+            <a href="#" class="link feynman__link">Подробнее &rarr;</a>
           </section>
 
           <section class="digits">
@@ -77,10 +136,18 @@
             </div> 
           </section>
 
-          <section class="feynman">
-            <h2 class="feynman__title">Метод Фейнмана</h2>
-            <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-            <a href="#" class="link feynman__link">Подробнее &rarr;</a>
+          <section class="khan">
+            <div class="khan__container">
+              <h3 class="khan__author">Салман Хан</h3>
+              <h2 class="khan__title">Весь мир — школа</h2>
+              <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+              <h3 class="khan__quote-author">Джордж Лукас</h3>
+              <h3 class="khan__quote-author-subline">Кинорежиссер, продюсер</h3>
+              <div class="khan__book-container">
+                <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги Салмана Хана Весь мир — школа">
+                <a class="khan__book-link link" href="#">Купить книгу &rarr;</a>
+              </div>
+            </div>
           </section>
 
           <section class="kaufman">
@@ -130,6 +197,17 @@
             </div>
             <div class="kaufman__triangle"></div>
           </section>
+
+           <section class="resources">
+             <h2 class="section-title">Полезные ресурсы</h2>
+             <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+             <div class="resources__logo-zone">
+                <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas — просветительский проект, посвящённый истории культуры">
+                <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип N+1 — российское научно-популярное интернет-издание.">
+                <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип Strelka — издание Института «Стрелка»">
+                <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Полка — это образовательный проект о самых важных произведениях русской литературы">
+             </div>
+           </section>
       </main>
 
       <footer class="footer">
